--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,12 @@ font-family:"Oswald, sans-serif;"
     color:rgb(0, 1, 2);
 }
 
+.feature ul{
+    padding-left:2rem;
+    list-style-type: none;
+}
+
+.feature ul li{
+    padding-left: 2rem;
+margin-bottom: 1rem
+}
